added llm agent

--- a/server/.env.example
+++ b/server/.env.example
@@ -5,3 +5,8 @@ MPESA_PASSKEY=your_passkey
 MPESA_SHORTCODE=your_shortcode
 MPESA_ENVIRONMENT=sandbox # or production
 API_URL=https://your-api-url.com
+# Google SSO configuration for development
+SSO_GOOGLE_CLIENT_ID=your_google_client_id
+SSO_GOOGLE_CLIENT_SECRET=your_google_client_secret
+SSO_GOOGLE_DISCOVERY_URL=https://accounts.google.com/.well-known/openid-configuration
+SSO_GOOGLE_REDIRECT_URI=https://curly-eureka-q7x44v77jj7qfxg79-5000.app.github.dev/api/auth/sso/google/callback
