--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,7 @@
     "@nestjs/schedule": "^6.0.0",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/websockets": "^11.1.1",
-    "@prisma/client": "^6.8.2",
+    "@prisma/client": "^6.10.1",
     "@types/axios": "^0.9.36",
     "@types/moment": "^2.11.29",
     "@types/saml2-js": "^3.0.4",
@@ -44,10 +44,12 @@
     "openid-client": "^5.7.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "saml2-js": "^4.0.3",
     "socket.io": "^4.8.1",
+    "speakeasy": "^2.0.0",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0"
   },
@@ -63,8 +65,10 @@
     "@types/node": "^22.15.21",
     "@types/openid-client": "^3.1.6",
     "@types/passport-jwt": "^4.0.1",
+    "@types/qrcode": "^1.5.5",
+    "@types/speakeasy": "^2.0.10",
     "jest": "^29.7.0",
-    "prisma": "^6.8.2",
+    "prisma": "^6.10.1",
     "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
