--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   },
   "description": "",
   "dependencies": {
+    "@nestjs-modules/ioredis": "^2.0.2",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.1.1",
     "@nestjs/config": "^4.0.2",
@@ -40,11 +41,13 @@
     "compression": "^1.8.0",
     "cookie-parser": "^1.4.7",
     "helmet": "^8.1.0",
+    "ioredis": "^5.6.1",
     "moment": "^2.30.1",
     "openid-client": "^5.7.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "qrcode": "^1.5.4",
+    "rate-limiter-flexible": "^7.1.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "saml2-js": "^4.0.3",
@@ -61,6 +64,7 @@
     "@types/argon2": "^0.14.1",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.2",
+    "@types/ioredis": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.15.21",
     "@types/openid-client": "^3.1.6",
